add two components: search link-square-featured

--- a/components.html
+++ b/components.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <head>
   <title>组件</title>
+  <meta charset="utf-8">
   <link rel="stylesheet" type="text/css" href="css/base.css">
   <link rel="stylesheet" type="text/css" href="css/theme.css">
   <link rel="stylesheet" type="text/css" href="css/components.css">
@@ -29,4 +30,26 @@
       <h4 class="link-square_desc">社会实践</h4></a><a class="link-square bg-green"><i class="fa fa-heart fa-2x link-square_icon"></i>
       <h4 class="link-square_desc">公益志愿</h4></a><a class="link-square"><i class="fa fa-search fa-2x link-square_icon"></i>
       <h4 class="link-square_desc">学术科技</h4></a></section>
+  <section class="clearfix">
+    <ul class="navbar">
+      <li><a>首页</a></li>
+      <li><a>团委介绍</a></li>
+      <li><a>团内档案</a></li>
+      <li><a>活动专题</a></li>
+      <li><a>组织介绍</a></li>
+      <li><a>社团风采</a></li>
+    </ul>
+  </section>
+  <section class="clearfix">
+    <form class="searchbar">
+      <input type="text" placeholder="关键词" class="searchbar_input">
+      <input type="submit" value="搜索" class="searchbar_btn">
+    </form>
+  </section>
+  <section class="clearfix"><a class="link-square-featured">
+      <div class="before">大创</div>
+      <div class="after"><i class="fa fa-laptop fa-3x"></i></div></a><a class="link-square-featured green">
+      <div class="before">挑战杯</div>
+      <div class="after"><i class="fa fa-bug fa-3x"></i></div></a></section>
+  <footer class="footer"></footer>
 </body>
