--- a/index.html
+++ b/index.html
@@ -1,13 +1,29 @@
 <!DOCTYPE html>
-<html lang="en">
 <head>
-  <meta charset="UTF-8">
   <title>首页</title>
   <link rel="stylesheet" type="text/css" href="css/base.css">
   <link rel="stylesheet" type="text/css" href="css/theme.css">
   <link rel="stylesheet" type="text/css" href="css/index.css">
+  <link rel="stylesheet" type="text/css" href="css/font-awesome.css">
 </head>
 <body>
-
+  <header class="header"><img class="logo">
+    <form class="searchbar">
+      <input type="text" placeholder="关键词" class="searchbar_input">
+      <input type="submit" value="搜索" class="searchbar_btn">
+    </form>
+  </header>
+  <nav class="nav clearfix">
+    <ul class="navbar">
+      <li><a>首页</a></li>
+      <li><a>团委介绍</a></li>
+      <li><a>团内档案</a></li>
+      <li><a>活动专题</a></li>
+      <li><a>组织介绍</a></li>
+      <li><a>社团风采</a></li>
+    </ul>
+  </nav>
+  <section class="banner"></section>
+  <section></section>
+  <footer class="footer"></footer>
 </body>
-</html>
