--- a/components.html
+++ b/components.html
@@ -13,18 +13,17 @@
         <div style="background-image:url('images/test-1.jpg');" class="link-img_img"></div>
       </div>
       <div class="link-img_text">
-        <h3 class="link-img_title">新闻标题</h3>
-        <p class="link-img_desc">新闻描述描述描述描述描述描述描述描述描述描述</p>
+        <h3 class="link-img_title">新闻标题标题标题标题标题</h3>
+        <p class="link-img_desc">新闻描述描述描述描述描述描述描述描述描述描述述描述描述描述描述描述述描述描述描述描述描述述描述描述描述描述描述述描述描述描述描述描述</p>
       </div></a></section>
   <section class="btns mt2 clearfix">
     <button class="btn">按钮</button><a href="#" class="btn">我是按钮</a>
     <input type="button" value="我也是按钮" class="btn">
-    <button class="btn btn-no-shadow">我没有阴影</button>
+    <button class="btn btn-shadow">我有阴影</button>
     <button class="btn btn-no-radius">我没有圆角</button>
-    <button class="btn btn-no-radius btn-no-shadow">我没有圆角也没有阴影</button>
-    <button class="btn btn btn-green">我变色了</button>
+    <button class="btn btn-no-radius btn-shadow">我没有圆角但有阴影</button><a href="#" class="link-rect">出国留学帮</a>
   </section>
-  <section class="link-squares mt2 clearfix"><a class="link-square bg-red"><i class="fa fa-bug fa-2x link-square_icon"></i>
+  <section class="link-squares mt2 clearfix"><a class="link-square bg-red"><i class="fa fa-trophy fa-2x link-square_icon"></i>
       <h4 class="link-square_desc">挑战杯</h4></a><a class="link-square bg-orange"><i class="fa fa-laptop fa-2x link-square_icon"></i>
       <h4 class="link-square_desc">大创</h4></a><a class="link-square bg-purple"><i class="fa fa-cubes fa-2x link-square_icon"></i>
       <h4 class="link-square_desc">社会实践</h4></a><a class="link-square bg-green"><i class="fa fa-heart fa-2x link-square_icon"></i>
@@ -51,5 +50,9 @@
       <div class="after"><i class="fa fa-laptop fa-3x"></i></div></a><a class="link-square-featured green">
       <div class="before">挑战杯</div>
       <div class="after"><i class="fa fa-bug fa-3x"></i></div></a></section>
+  <section class="clearfix sec-arrow">
+    <button class="arrow"></button>
+    <button class="arrow right"></button>
+  </section>
   <footer class="footer"></footer>
 </body>
