change special section's animation

--- a/index.html
+++ b/index.html
@@ -32,37 +32,12 @@
     <p class="c-grey-4 tc">专题的简单描述精简高大上一点点</p>
     <div class="container">
       <div class="row">
-        <div class="links mauto clearfix"><a class="link-square-featured lighter">
-            <div class="before"><i class="fa fa-trophy fa-2x"></i>
-              <h4>挑战杯</h4>
-            </div>
-            <div class="after"><i class="fa fa-trophy fa-2x"></i>
-              <h4>挑战杯</h4>
-            </div></a><a class="link-square-featured light">
-            <div class="before"><i class="fa fa-laptop fa-2x"></i>
-              <h4>大创</h4>
-            </div>
-            <div class="after"><i class="fa fa-laptop fa-2x"></i>
-              <h4>大创</h4>
-            </div></a><a class="link-square-featured">
-            <div class="before"><i class="fa fa-globe fa-2x"></i>
-              <h4>社会实践</h4>
-            </div>
-            <div class="after"><i class="fa fa-globe fa-2x"></i>
-              <h4>社会实践</h4>
-            </div></a><a class="link-square-featured dark">
-            <div class="before"><i class="fa fa-heart fa-2x"></i>
-              <h4>公益志愿</h4>
-            </div>
-            <div class="after"><i class="fa fa-heart fa-2x"></i>
-              <h4>公益志愿</h4>
-            </div></a><a class="link-square-featured darker">
-            <div class="before"><i class="fa fa-search fa-2x"></i>
-              <h4>学术科技</h4>
-            </div>
-            <div class="after"><i class="fa fa-search fa-2x"></i>
-              <h4>学术科技</h4>
-            </div></a></div>
+        <div class="links mauto clearfix"><a class="link-square lighter"><i class="fa fa-trophy fa-2x link-square_icon"></i>
+            <h4 class="link-square_desc">挑战杯</h4></a><a class="link-square light"><i class="fa fa-laptop fa-2x link-square_icon"></i>
+            <h4 class="link-square_desc">大创</h4></a><a class="link-square"><i class="fa fa-globe fa-2x link-square_icon"></i>
+            <h4 class="link-square_desc">社会实践</h4></a><a class="link-square dark"><i class="fa fa-heart fa-2x link-square_icon"></i>
+            <h4 class="link-square_desc">公益志愿</h4></a><a class="link-square darker"><i class="fa fa-search fa-2x link-square_icon"></i>
+            <h4 class="link-square_desc">学术科技</h4></a></div>
       </div>
     </div>
   </section>
