--- a/components.html
+++ b/components.html
@@ -23,11 +23,11 @@
     <button class="btn btn-no-radius">我没有圆角</button>
     <button class="btn btn-no-radius btn-shadow">我没有圆角但有阴影</button><a href="#" class="link-rect">出国留学帮</a>
   </section>
-  <section class="link-squares mt2 clearfix"><a class="link-square bg-red"><i class="fa fa-trophy fa-2x link-square_icon"></i>
-      <h4 class="link-square_desc">挑战杯</h4></a><a class="link-square bg-orange"><i class="fa fa-laptop fa-2x link-square_icon"></i>
-      <h4 class="link-square_desc">大创</h4></a><a class="link-square bg-purple"><i class="fa fa-cubes fa-2x link-square_icon"></i>
-      <h4 class="link-square_desc">社会实践</h4></a><a class="link-square bg-green"><i class="fa fa-heart fa-2x link-square_icon"></i>
-      <h4 class="link-square_desc">公益志愿</h4></a><a class="link-square"><i class="fa fa-search fa-2x link-square_icon"></i>
+  <section class="link-squares mt2 clearfix"><a class="link-square lighter"><i class="fa fa-trophy fa-2x link-square_icon"></i>
+      <h4 class="link-square_desc">挑战杯</h4></a><a class="link-square light"><i class="fa fa-laptop fa-2x link-square_icon"></i>
+      <h4 class="link-square_desc">大创</h4></a><a class="link-square"><i class="fa fa-globe fa-2x link-square_icon"></i>
+      <h4 class="link-square_desc">社会实践</h4></a><a class="link-square dark"><i class="fa fa-heart fa-2x link-square_icon"></i>
+      <h4 class="link-square_desc">公益志愿</h4></a><a class="link-square darker"><i class="fa fa-search fa-2x link-square_icon"></i>
       <h4 class="link-square_desc">学术科技</h4></a></section>
   <section class="clearfix">
     <ul class="navbar">
@@ -45,11 +45,37 @@
       <input type="submit" value="搜索" class="searchbar_btn">
     </form>
   </section>
-  <section class="clearfix"><a class="link-square-featured">
-      <div class="before">大创</div>
-      <div class="after"><i class="fa fa-laptop fa-3x"></i></div></a><a class="link-square-featured green">
-      <div class="before">挑战杯</div>
-      <div class="after"><i class="fa fa-bug fa-3x"></i></div></a></section>
+  <section class="clearfix"><a class="link-square-featured lighter">
+      <div class="before"><i class="fa fa-trophy fa-2x"></i>
+        <h4>挑战杯</h4>
+      </div>
+      <div class="after"><i class="fa fa-trophy fa-2x"></i>
+        <h4>挑战杯</h4>
+      </div></a><a class="link-square-featured light">
+      <div class="before"><i class="fa fa-laptop fa-2x"></i>
+        <h4>大创</h4>
+      </div>
+      <div class="after"><i class="fa fa-laptop fa-2x"></i>
+        <h4>大创</h4>
+      </div></a><a class="link-square-featured">
+      <div class="before"><i class="fa fa-globe fa-2x"></i>
+        <h4>社会实践</h4>
+      </div>
+      <div class="after"><i class="fa fa-globe fa-2x"></i>
+        <h4>社会实践</h4>
+      </div></a><a class="link-square-featured dark">
+      <div class="before"><i class="fa fa-heart fa-2x"></i>
+        <h4>公益志愿</h4>
+      </div>
+      <div class="after"><i class="fa fa-heart fa-2x"></i>
+        <h4>公益志愿</h4>
+      </div></a><a class="link-square-featured darker">
+      <div class="before"><i class="fa fa-search fa-2x"></i>
+        <h4>学术科技</h4>
+      </div>
+      <div class="after"><i class="fa fa-search fa-2x"></i>
+        <h4>学术科技</h4>
+      </div></a></section>
   <section class="clearfix sec-arrow">
     <button class="arrow"></button>
     <button class="arrow right"></button>
