add font Raleway add slide effect for student-league

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <div class="banner-img"></div>
   </section>
   <section class="special clearfix">
-    <h2 class="f8 c-grey-2 tc">专题<span class="c-grey-4 fl ml1">SPECIAL</span></h2>
+    <h2 class="f8 c-grey-2 tc">专题<span class="c-grey-4 fl ml1 f-rw">SPECIAL</span></h2>
     <p class="c-grey-4 tc">专题的简单描述精简高大上一点点</p>
     <div class="container">
       <div class="row">
@@ -42,7 +42,7 @@
     </div>
   </section>
   <section class="news clearfix bg-grey-1">
-    <h2 class="f8 c-grey-2 tc">新闻<span class="c-grey-4 fl ml1">NEWS</span></h2>
+    <h2 class="f8 c-grey-2 tc">新闻<span class="c-grey-4 fl ml1 f-rw">NEWS</span></h2>
     <div class="container">
       <div class="row">
         <div class="l-4"><a class="link-img">
@@ -63,7 +63,7 @@
             </div></a></div>
         <div class="l-4"><a class="link-img">
             <div class="link-img_img-wrap">
-              <div style="background-image:url('images/test-2.jpg');" class="link-img_img"></div>
+              <div style="background-image:url('images/test-3.jpg');" class="link-img_img"></div>
             </div>
             <div class="link-img_text">
               <h3 class="link-img_title">新闻三标题</h3>
@@ -73,7 +73,7 @@
     </div>
   </section>
   <section class="notice clearfix">
-    <h2 class="f8 c-grey-2 tc">公告<span class="c-grey-4 fl ml1">NOTICE</span></h2>
+    <h2 class="f8 c-grey-2 tc">公告<span class="c-grey-4 fl ml1 f-rw">NOTICE</span></h2>
     <div class="container">
       <div class="row">
         <div class="l-5 m-5 s-6 x-8 l-offset-1 m-offset-1 s-offset-0 x-offset-2">
@@ -96,23 +96,136 @@
     </div>
     <div class="mt3 tc"><a class="btn mauto">更多公告</a></div>
   </section>
+  <div class="youth-league-bg"></div>
   <section class="youth-league pt5 clearfix">
-    <h2 class="f8 tc">川大团委<span class="op5 fl ml1">ABOUT US</span></h2>
-    <button class="arrow left"></button>
-    <button class="arrow right"></button>
-    <div class="container">
-      <div class="row">
-        <section class="l-8 m-10 s-12 x-12 l-offset-2 m-offset-1 s-offset-0 x-offset-0">
-          <h3 class="f5 tc group-name">四川大学青年传媒</h3>
-          <p class="tc group-into">四川大学青年传媒的介绍四川大学青年传媒的介绍四川大学青年传媒的介绍四川大学青年传媒的介绍</p>
-          <p class="tc group-into">四川大学青年传媒的介绍四川大学青年传媒的介绍四川大学青年传媒的介绍</p>
-          <p class="tc group-into">四川大学青年传媒的介绍四川大学青年传媒的介绍</p>
-        </section>
+    <h2 class="title f8 tc">川大团委<span class="op5 fl ml1 f-rw">ABOUT US</span></h2>
+    <button id="yl-left" class="arrow left"></button>
+    <button id="yl-right" class="arrow right"></button>
+    <div id="intro-list" style="left:0;" class="intro-list">
+      <div class="intro-wrap blue">
+        <div class="container">
+          <div class="row">
+            <section class="l-8 m-10 s-12 x-12 l-offset-2 m-offset-1 s-offset-0 x-offset-0">
+              <h3 class="f5 tc group-name">团委秘书处</h3>
+              <p class="tc group-intro">四川大学青年传媒的介绍四川大学青年传媒的介绍四川大学青年传媒的介绍四川大学青年传媒的介绍</p>
+              <p class="tc group-intro">四川大学青年传媒的介绍四川大学青年传媒的介绍四川大学青年传媒的介绍</p>
+              <p class="tc group-intro">四川大学青年传媒的介绍四川大学青年传媒的介绍</p>
+            </section>
+          </div>
+        </div>
+      </div>
+      <div class="intro-wrap green">
+        <div class="container">
+          <div class="row">
+            <section class="l-8 m-10 s-12 x-12 l-offset-2 m-offset-1 s-offset-0 x-offset-0">
+              <h3 class="f5 tc group-name">学生会</h3>
+              <p class="tc group-intro">四川大学青年传媒的介绍四川大学青年传媒的介绍四川大学青年传媒的介绍四川大学青年传媒的介绍</p>
+              <p class="tc group-intro">四川大学青年传媒的介绍四川大学青年传媒的介绍四川大学青年传媒的介绍</p>
+              <p class="tc group-intro">四川大学青年传媒的介绍四川大学青年传媒的介绍</p>
+            </section>
+          </div>
+        </div>
+      </div>
+      <div class="intro-wrap red">
+        <div class="container">
+          <div class="row">
+            <section class="l-8 m-10 s-12 x-12 l-offset-2 m-offset-1 s-offset-0 x-offset-0">
+              <h3 class="f5 tc group-name">团委组织部</h3>
+              <p class="tc group-intro">四川大学青年传媒的介绍四川大学青年传媒的介绍四川大学青年传媒的介绍四川大学青年传媒的介绍</p>
+              <p class="tc group-intro">四川大学青年传媒的介绍四川大学青年传媒的介绍四川大学青年传媒的介绍</p>
+              <p class="tc group-intro">四川大学青年传媒的介绍四川大学青年传媒的介绍</p>
+            </section>
+          </div>
+        </div>
+      </div>
+      <div class="intro-wrap blue">
+        <div class="container">
+          <div class="row">
+            <section class="l-8 m-10 s-12 x-12 l-offset-2 m-offset-1 s-offset-0 x-offset-0">
+              <h3 class="f5 tc group-name">团委宣传部</h3>
+              <p class="tc group-intro">四川大学青年传媒的介绍四川大学青年传媒的介绍四川大学青年传媒的介绍四川大学青年传媒的介绍</p>
+              <p class="tc group-intro">四川大学青年传媒的介绍四川大学青年传媒的介绍四川大学青年传媒的介绍</p>
+              <p class="tc group-intro">四川大学青年传媒的介绍四川大学青年传媒的介绍</p>
+            </section>
+          </div>
+        </div>
+      </div>
+      <div class="intro-wrap green">
+        <div class="container">
+          <div class="row">
+            <section class="l-8 m-10 s-12 x-12 l-offset-2 m-offset-1 s-offset-0 x-offset-0">
+              <h3 class="f5 tc group-name">团委文化艺术部</h3>
+              <p class="tc group-intro">四川大学青年传媒的介绍四川大学青年传媒的介绍四川大学青年传媒的介绍四川大学青年传媒的介绍</p>
+              <p class="tc group-intro">四川大学青年传媒的介绍四川大学青年传媒的介绍四川大学青年传媒的介绍</p>
+              <p class="tc group-intro">四川大学青年传媒的介绍四川大学青年传媒的介绍</p>
+            </section>
+          </div>
+        </div>
+      </div>
+      <div class="intro-wrap red">
+        <div class="container">
+          <div class="row">
+            <section class="l-8 m-10 s-12 x-12 l-offset-2 m-offset-1 s-offset-0 x-offset-0">
+              <h3 class="f5 tc group-name">团委创业就业促进部</h3>
+              <p class="tc group-intro">四川大学青年传媒的介绍四川大学青年传媒的介绍四川大学青年传媒的介绍四川大学青年传媒的介绍</p>
+              <p class="tc group-intro">四川大学青年传媒的介绍四川大学青年传媒的介绍四川大学青年传媒的介绍</p>
+              <p class="tc group-intro">四川大学青年传媒的介绍四川大学青年传媒的介绍</p>
+            </section>
+          </div>
+        </div>
+      </div>
+      <div class="intro-wrap blue">
+        <div class="container">
+          <div class="row">
+            <section class="l-8 m-10 s-12 x-12 l-offset-2 m-offset-1 s-offset-0 x-offset-0">
+              <h3 class="f5 tc group-name">科协</h3>
+              <p class="tc group-intro">四川大学青年传媒的介绍四川大学青年传媒的介绍四川大学青年传媒的介绍四川大学青年传媒的介绍</p>
+              <p class="tc group-intro">四川大学青年传媒的介绍四川大学青年传媒的介绍四川大学青年传媒的介绍</p>
+              <p class="tc group-intro">四川大学青年传媒的介绍四川大学青年传媒的介绍</p>
+            </section>
+          </div>
+        </div>
+      </div>
+      <div class="intro-wrap green">
+        <div class="container">
+          <div class="row">
+            <section class="l-8 m-10 s-12 x-12 l-offset-2 m-offset-1 s-offset-0 x-offset-0">
+              <h3 class="f5 tc group-name">青志</h3>
+              <p class="tc group-intro">四川大学青年传媒的介绍四川大学青年传媒的介绍四川大学青年传媒的介绍四川大学青年传媒的介绍</p>
+              <p class="tc group-intro">四川大学青年传媒的介绍四川大学青年传媒的介绍四川大学青年传媒的介绍</p>
+              <p class="tc group-intro">四川大学青年传媒的介绍四川大学青年传媒的介绍</p>
+            </section>
+          </div>
+        </div>
+      </div>
+      <div class="intro-wrap red">
+        <div class="container">
+          <div class="row">
+            <section class="l-8 m-10 s-12 x-12 l-offset-2 m-offset-1 s-offset-0 x-offset-0">
+              <h3 class="f5 tc group-name">社团联</h3>
+              <p class="tc group-intro">四川大学青年传媒的介绍四川大学青年传媒的介绍四川大学青年传媒的介绍四川大学青年传媒的介绍</p>
+              <p class="tc group-intro">四川大学青年传媒的介绍四川大学青年传媒的介绍四川大学青年传媒的介绍</p>
+              <p class="tc group-intro">四川大学青年传媒的介绍四川大学青年传媒的介绍</p>
+            </section>
+          </div>
+        </div>
+      </div>
+      <div class="intro-wrap blue">
+        <div class="container">
+          <div class="row">
+            <section class="l-8 m-10 s-12 x-12 l-offset-2 m-offset-1 s-offset-0 x-offset-0">
+              <h3 class="f5 tc group-name">川大青年研究中心</h3>
+              <p class="tc group-intro">四川大学青年传媒的介绍四川大学青年传媒的介绍四川大学青年传媒的介绍四川大学青年传媒的介绍</p>
+              <p class="tc group-intro">四川大学青年传媒的介绍四川大学青年传媒的介绍四川大学青年传媒的介绍</p>
+              <p class="tc group-intro">四川大学青年传媒的介绍四川大学青年传媒的介绍</p>
+            </section>
+          </div>
+        </div>
       </div>
     </div>
   </section>
   <section class="student-ground">
-    <h2 class="f8 c-grey-2 tc">学生园地<span class="c-grey-4 fl ml1">STUDENT</span></h2>
+    <h2 class="f8 c-grey-2 tc">学生园地<span class="c-grey-4 fl ml1 f-rw">STUDENT</span></h2>
     <div class="container">
       <div class="row">
         <div class="l-6 m-6 s-6 x-10 l-offset-1 m-offset-1 s-offset-0 x-offset-1">
@@ -177,4 +290,6 @@
       </div>
     </div>
   </footer>
+  <script type="text/javascript" src="js/melon.js"></script>
+  <script type="text/javascript" src="js/index.js"></script>
 </body>
