add news list slide effect but without auto slide

--- a/index.html
+++ b/index.html
@@ -44,31 +44,73 @@
   <section class="news clearfix bg-grey-1">
     <h2 class="f8 c-grey-2 tc">新闻<span class="c-grey-4 fl ml1 f-rw">NEWS</span></h2>
     <div class="container">
-      <div class="row">
-        <div class="l-4"><a class="link-img">
-            <div class="link-img_img-wrap">
-              <div style="background-image:url('images/test-1.jpg');" class="link-img_img"></div>
-            </div>
-            <div class="link-img_text">
-              <h3 class="link-img_title">新闻标题</h3>
-              <p class="link-img_desc">新闻描述描述描述描述描述描述描述描述描述描述</p>
-            </div></a></div>
-        <div class="l-4"><a class="link-img">
-            <div class="link-img_img-wrap">
-              <div style="background-image:url('images/test-2.jpg');" class="link-img_img"></div>
-            </div>
-            <div class="link-img_text">
-              <h3 class="link-img_title">新闻2标题</h3>
-              <p class="link-img_desc">新闻描述描述描述描述描述描述描述描述描述描述描述描述描述描述描述描述描述描述描述描述描述描述</p>
-            </div></a></div>
-        <div class="l-4"><a class="link-img">
-            <div class="link-img_img-wrap">
-              <div style="background-image:url('images/test-3.jpg');" class="link-img_img"></div>
-            </div>
-            <div class="link-img_text">
-              <h3 class="link-img_title">新闻三标题</h3>
-              <p class="link-img_desc">新闻描述描述描述描述描述描述描述</p>
-            </div></a></div>
+      <div id="news-list-wrap" class="news-list-wrap pr">
+        <div id="news-list" style="left:0" class="news-list">
+          <div class="news-wrap"><a class="link-img">
+              <div class="link-img_img-wrap">
+                <div style="background-image:url('images/test-1.jpg');" class="link-img_img"></div>
+              </div>
+              <div class="link-img_text">
+                <h3 class="link-img_title">新闻标题</h3>
+                <p class="link-img_desc">新闻描述描述描述描述描述描述描述描述描述描述</p>
+              </div></a></div>
+          <div class="news-wrap"><a class="link-img">
+              <div class="link-img_img-wrap">
+                <div style="background-image:url('images/test-1.jpg');" class="link-img_img"></div>
+              </div>
+              <div class="link-img_text">
+                <h3 class="link-img_title">新闻标题</h3>
+                <p class="link-img_desc">新闻描述描述描述描述描述描述描述描述描述描述</p>
+              </div></a></div>
+          <div class="news-wrap"><a class="link-img">
+              <div class="link-img_img-wrap">
+                <div style="background-image:url('images/test-1.jpg');" class="link-img_img"></div>
+              </div>
+              <div class="link-img_text">
+                <h3 class="link-img_title">新闻标题</h3>
+                <p class="link-img_desc">新闻描述描述描述描述描述描述描述描述描述描述</p>
+              </div></a></div>
+          <div class="news-wrap"><a class="link-img">
+              <div class="link-img_img-wrap">
+                <div style="background-image:url('images/test-1.jpg');" class="link-img_img"></div>
+              </div>
+              <div class="link-img_text">
+                <h3 class="link-img_title">新闻标题</h3>
+                <p class="link-img_desc">新闻描述描述描述描述描述描述描述描述描述描述</p>
+              </div></a></div>
+          <div class="news-wrap"><a class="link-img">
+              <div class="link-img_img-wrap">
+                <div style="background-image:url('images/test-1.jpg');" class="link-img_img"></div>
+              </div>
+              <div class="link-img_text">
+                <h3 class="link-img_title">新闻标题</h3>
+                <p class="link-img_desc">新闻描述描述描述描述描述描述描述描述描述描述</p>
+              </div></a></div>
+          <div class="news-wrap"><a class="link-img">
+              <div class="link-img_img-wrap">
+                <div style="background-image:url('images/test-1.jpg');" class="link-img_img"></div>
+              </div>
+              <div class="link-img_text">
+                <h3 class="link-img_title">新闻标题</h3>
+                <p class="link-img_desc">新闻描述描述描述描述描述描述描述描述描述描述</p>
+              </div></a></div>
+          <div class="news-wrap"><a class="link-img">
+              <div class="link-img_img-wrap">
+                <div style="background-image:url('images/test-1.jpg');" class="link-img_img"></div>
+              </div>
+              <div class="link-img_text">
+                <h3 class="link-img_title">新闻标题</h3>
+                <p class="link-img_desc">新闻描述描述描述描述描述描述描述描述描述描述</p>
+              </div></a></div>
+          <div class="news-wrap"><a class="link-img">
+              <div class="link-img_img-wrap">
+                <div style="background-image:url('images/test-1.jpg');" class="link-img_img"></div>
+              </div>
+              <div class="link-img_text">
+                <h3 class="link-img_title">新闻标题</h3>
+                <p class="link-img_desc">新闻描述描述描述描述描述描述描述描述描述描述</p>
+              </div></a></div>
+        </div>
       </div>
     </div>
   </section>
